--- a/res/layout/activity_console.xml
+++ b/res/layout/activity_console.xml
@@ -17,32 +17,59 @@
         android:gravity="center"
         android:text="BID" />
 
-    <Switch
-        android:id="@+id/switchAuto"
+    <TextView
+        android:id="@+id/textViewTemp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="โหมดอัตโนมัติ" />
+        android:gravity="right"
+        android:text="Temp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="2" >
 
-        <ToggleButton
-            android:id="@+id/toggleRelayHeater"
-            android:layout_width="0px"
-            android:layout_height="wrap_content"
-            android:textOff="ฮีตเตอร์"
-    		android:textOn="ฮีตเตอร์"
-            android:layout_weight="1" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical" >
 
-        <ToggleButton
-            android:id="@+id/toggleRelayFilter"
-            android:layout_width="0px"
-            android:layout_height="wrap_content"
-            android:textOff="เครื่องกรอง"
-    		android:textOn="เครื่องกรอง"
-            android:layout_weight="1" />
+            <Switch
+                android:id="@+id/switchRelayHeater"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Auto" />
+
+            <ToggleButton
+                android:id="@+id/toggleRelayHeater"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textOff="ฮีตเตอร์"
+                android:textOn="ฮีตเตอร์" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical" >
+
+            <Switch
+                android:id="@+id/switchRelayFilter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Auto" />
+
+            <ToggleButton
+                android:id="@+id/toggleRelayFilter"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textOff="เครื่องกรอง"
+                android:textOn="เครื่องกรอง" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -50,7 +77,7 @@
         android:id="@+id/buttonFeed"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:text="ให้อาหาร" />
 
     <Button
         android:id="@+id/buttonRefresh"
