--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -10,11 +10,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.rmutsv.aquarium.MainActivity" >
 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_launcher" />
+        android:gravity="center" >
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/ic_launcher" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,6 +38,7 @@
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:layout_weight="8"
+            android:maxLines="1"
             android:ems="10" >
 
             <requestFocus />
@@ -56,6 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="8"
             android:ems="10"
+            android:maxLines="1"
             android:inputType="textPassword" />
 
     </LinearLayout>
