--- a/res/layout/listview_row_device.xml
+++ b/res/layout/listview_row_device.xml
@@ -44,6 +44,7 @@
             android:id="@+id/textViewPort"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:text="Port" />
 
     </LinearLayout>
