--- a/res/layout/activity_console.xml
+++ b/res/layout/activity_console.xml
@@ -39,7 +39,8 @@
                 android:id="@+id/switchRelayHeater"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Auto" />
+                android:text="Auto"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <ToggleButton
                 android:id="@+id/toggleRelayHeater"
@@ -60,7 +61,8 @@
                 android:id="@+id/switchRelayFilter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Auto" />
+                android:text="Auto"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <ToggleButton
                 android:id="@+id/toggleRelayFilter"
